--- a/ADMINISTRATION_BASE_DE_DONNEES/Site/Search/search.html
+++ b/ADMINISTRATION_BASE_DE_DONNEES/Site/Search/search.html
@@ -9,10 +9,10 @@
   <header>
     <h2 class="logo">MENTALHEAL</h2>
     <nav class="navigation">
-        <a href="accueil.html">HOME</a>
-        <a href="search.html">SEARCH</a>
+        <a href="../Accueil/accueil.html">HOME</a>
+        <a href="../Search/search.html">SEARCH</a>
         <a href="../Contact/contact.html">CONTACT</a>
-        <a href="../Login/login.html"> <button class="btnlogin_popup">Login</button> </a>
+        <a href="../Login/login.html"> <button class="btnlogin_popup">Login</button> </a>                  
     </nav>
   </header>
 
@@ -30,7 +30,7 @@
     </form>
   </div>
 
-  <script src="search.js"></script> <!-- fichier JavaScript ici -->
+  <script src="search.js"></script> <!-- lien renvoyant au fichier JavaScript search.js-->
 
 </body>
 </html>
