--- a/ADMINISTRATION_BASE_DE_DONNEES/Site/Search/result_search.html
+++ b/ADMINISTRATION_BASE_DE_DONNEES/Site/Search/result_search.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Results</h1>
   <div id="result-container">
-    <!-- Les résultats seront affichés ici -->
+    <!-- Les résultats s'afficheront ici -->
     </div>
   <a href="/">Back to Search</a>
 </body>
