B3 DATA & IA - MES PROJETS

--- a/TRONC_COMMUN/NoSQL/Site/Login/login.html
+++ b/TRONC_COMMUN/NoSQL/Site/Login/login.html
@@ -14,7 +14,7 @@
         <h2 class="logo">FASHION SHOP</h2>
         <nav class="navigation">
             <a href="../Accueil/accueil.html">HOME</a>
-            <a href="../Search/search.html">SHOP</a>
+            <a href="../Shop/shop.html">SHOP</a>
             <a href="../Search/search.html">SEARCH</a>
             <a href="../Contact/contact.html">CONTACT</a>
             <a href="../Login/login.html"> <button class="btnlogin_popup">Login</button> </a>                  
